--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
-    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "nodemon": "^3.1.4"
   }
 }
